--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿altair==5.2.0
+altair==5.2.0
 asgiref==3.8.1
 asttokens==2.4.1
 attrs==23.1.0
@@ -54,6 +54,8 @@ pydub==0.25.1
 Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
+pytz==2023.3.post1
+pywin32==306
 pyzmq==25.1.2
 referencing==0.32.0
 requests==2.31.0
