--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,14 @@ MarkupSafe==2.1.5
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.2
+Pillow==9.5.0
+pydub==0.25.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 referencing==0.35.1
 rpds-py==0.18.0
 six==1.16.0
+streamlit==1.32.0
 streamlit-option-menu==0.3.12
 toolz==0.12.1
 tzdata==2024.1
