--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 blobfile==2.1.1
 filelock==3.14.0
-ffmpeg==1.4
-ffprobe==0.5
+ffmpeg-python
+streamlit
 lxml==4.9.4
 pycryptodomex==3.20.0
 pydub==0.25.1
